# pynecone-website

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  pcconfig.py  pyproject.toml
.github/workflows/: nextjs.yml  qa.yml
.web/: bun.lockb  package.json
.web/pages/: events.js  index.js
pynecone_website/: __init__.py  components.py  events.py  index.py  pynecone_website.py
scripts/: build.py
